# fast-paillier

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: comparison.rs
src/: decryption_key.rs  encryption_key.rs  lib.rs  serde.rs  utils.rs
src/decryption_key/: faster_encryption.rs
src/utils/: small_primes.rs
tests/: integration.rs
