[package]
name = "fast-paillier"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Optimized Paillier encryption scheme"
repository = "https://github.com/dfns/fast-paillier"
categories = ["algorithms", "cryptography"]
keywords = ["paillier", "public-key", "encryption"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = { version = "1.21", default-features = false, features = ["std", "integer", "rand"] }

rand_core = "0.6"

bytemuck = { version = "1.5", features = ["derive"] }
thiserror = "1"

serde = { version = "1", optional = true }

[dev-dependencies]
rand = "0.8"
rand_dev = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }
libpaillier = { version = "0.5", default-features = false, features = ["gmp"] }

[features]
serde = ["dep:serde", "rug/serde"]

[[bench]]
name = "comparison"
harness = false
